[package]
name = "uring_plus_quiche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["derive"] }
io-uring = { version = "0.5.3", features = ["unstable"] }
libc = "0.2.127"
nix = "0.24.2"
quiche = "0.14.0"
